# ball_contrib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: BALLContribConfigure.cmake  BALLContribLibraries.cmake  BALLContribMacros.cmake  BALLContribPackages.cmake  BALLContribPython.cmake  ContribMacros.cmake  ContribSetup.cmake  FixDylibInstallNames.cmake  InvokeNmake.cmake  ball_contrib_version.cmake.in
libraries/: bison.cmake  bison_install.cmake.in  boost.cmake  boost.cmake.autosave  ctd2galaxy.cmake  eigen3.cmake  fftw.cmake  fftw3.cmake  fftw3_install.cmake.in  fftw_install.cmake.in  flex.cmake  flex_install.cmake.in  glew.cmake  glew_install.cmake.in  install_template.cmake.in  oncrpc.cmake  openbabel.cmake  openssl.cmake  poco.cmake  python.cmake  qt.cmake  qt4.cmake  qt5.cmake  rtfact.cmake  sip.cmake  sip_install.cmake.in  tbb.cmake  tbb_install.cmake.in
libraries/boost/: configure_ext_project.cmake  configure_package.cmake
libraries/boost/patches/: patch_boost_cstdint.hpp
libraries/bzip2/: configure_ext_project.cmake
libraries/bzip2/patches/: bzip2-1.0.6-Makefile.diff
libraries/eigen3/: configure_ext_project.cmake  configure_package.cmake
libraries/eigen3/patches/: EigenDetermineVSServicePack.cmake.diff  EigenDetermineVSServicePack.cmake.patch  patch_1_EigenDetermineVSServicePack.cmake.diff
libraries/fftw/: configure_ext_project.cmake  configure_package.cmake
libraries/glew/: configure_ext_project.cmake  configure_package.cmake
libraries/glew/patches/: makefile_glew_dest.diff  makefile_glew_dest.diff.in
libraries/gsl/: configure_ext_project.cmake  configure_package.cmake
libraries/lpsolve/: configure_ext_project.cmake  configure_package.cmake
libraries/openbabel/: configure_package.cmake
libraries/openbabel/patches/: CMakeLists.txt.diff  patch_1_CMakeLists.txt.diff  patch_2_CMakeLists.txt.diff
libraries/patch/: configure_package.cmake
libraries/qt/: configure_package.cmake
libraries/qt4/: configure_package.cmake
libraries/qt4/patches/: qt-everywhere-opensource-src-4.8.6-osx-10.10.patch
libraries/qt5/: configure_package.cmake
libraries/sip/: configure_package.cmake
libraries/tbb/: configure_package.cmake
libraries/zlib/: configure_ext_project.cmake
tools/: generate_contrib_packages.cmake
